--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Blog | {{ block.super }}{% endblock%}
+{% block title %}Blog {{ block.super }}{% endblock%}
 {% block breadcrumb %}
-<ul class="breadcrumb">
-  <li><a href="/">Home</a> <span class="divider">/</span></li>
-  <li class="active">Blog</li>
-</ul>
+
 {% endblock %}
 
 {% block content %}
@@ -15,11 +12,23 @@
         {% for item in articles %}
         <article class="news-item">
             <h4 class="title"><a href="{% url 'detail' id=item.id %}">{{ item.title }}</a></h4>
-            <div class="meta">{{ item.publish_date|date:"F j, Y" }}</div>
-            <div class="text">
-                <p>{{ item.description|safe }}</p>
+             <div class="text">
+                <p>{{ item.content|safe }}</p>
+            </div>
+
+            <div class="meta">
+
+            <ul class="nav nav-pills">
+             <li><a href="{% url 'blog-date-archive' month=item.publish_date|date:"m" year=item.publish_date|date:"Y" %}"> {{ item.publish_date|date:"F j, Y" }}</a></li>
+              {% for cg in item.categories.all %}
+               <li><a href="{% url 'blog-category-archive' id=cg.id %}">{{ cg.title }}</a></li>
+             {% endfor %}
+             </ul>
             </div>
         </article>
+            <ul>
+         <liclass="divider-vertical"></li>
+         </ul>
         {% endfor %}
 
         <div class="pagination pagination-small pagination-centered">
