--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                         <li{% if "/" == request.get_full_path %} class="active"{% endif %}><a href="/">Home</a></li>
                         <li{% if "/blog/" == request.get_full_path %} class="active"{% endif %}><a href="/">Blog</a></li>
                          <li><a href="#">归档</a></li>
-                        <li><a href="#">Wiki</a></li>
+                        <li><a href="{% url 'wiki-index' %}">Wiki</a></li>
                         <li><a href="#">关于我</a></li>
                     </ul>
                     <h3 class="muted">MemoryTree</h3>
