--- a/templates/wiki/single.html
+++ b/templates/wiki/single.html
@@ -15,7 +15,7 @@
     <div class="span9">
         <h3>{{ post.title }}</h3>
         <p class="meta">{{ post.publish_date|date:"F j, Y" }}</p>
-        {{ post.content_markup|safe }}
+        {{ post.content|custom_markdown }}
         <p class="meta">{% for category in post.categories.all %}<a class="btn" href="{% url 'wiki-category-archive' id=category.id %}">{{ category.title }}</a> {% endfor %}</p>
         {% if request.user.is_staff %}
         [ <a class="edit-link" href="{{ post.get_admin_url }}">Edit</a> ]
@@ -24,8 +24,21 @@
 <div class="span3">
         <ul class="nav nav-list">
             <li class="nav-header">Categories</li>
-            {% for tmp in categories %}
-            <li{% if category.id == tmp.id %} class="active"{% endif %}><a href="{% url 'wiki-category-archive' id=tmp.id %}">{{ tmp.title }}</a></li>
+             {% for thing in categories %}
+                {% for branch, obj in thing.as_tree %}
+                {% if obj %}
+                     <li{% if category.id == obj.id %} class="active"{% endif %}><a href="{% url 'wiki-category-post' id=obj.id %}">{{ obj.title }}</a>
+                        {% if branch %}
+                            <ul>
+                        {% else %}
+                            </li>
+                        {% endif %}
+                        {% else %}
+                        {% if branch %}
+                            </ul>
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
             {% endfor %}
         </ul>
     </div>
